[project]
name = "aio-databases"
version = "1.3.0"
description = "Async support for various databases"
authors = [{ name = "Kirill Klenov", email = "horneds@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
keywords = [
  "asyncio",
  "trio",
  "databases",
  "mysql",
  "sqlite",
  "postgres",
  "postgresql",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: AsyncIO",
  "Framework :: Trio",
]
dependencies = ["typing-extensions ; python_full_version < '3.11'"]

[project.optional-dependencies]
asyncpg = ["asyncpg"]
aiopg = ["aiopg"]
aiomysql = ["aiomysql"]
aiosqlite = ["aiosqlite"]
aioodbc = ["aioodbc"]
trio_mysql = ["trio_mysql"]

[project.urls]
Homepage = "https://github.com/klen/aio-databases"
Repository = "https://github.com/klen/aio-databases"

[dependency-groups]
dev = [
  "aiomysql",
  "aioodbc",
  "aiopg",
  "aiosqlite",
  "asyncpg",
  "cryptography",
  "psycopg2-binary",
  "pypika-orm",
  "pytest",
  "pytest-aio[trio]",
  "trio_mysql",
  "ruff",
  "pre-commit",
  "pyrefly>=0.52.0",
]

[tool.pytest.ini_options]
addopts = "--strict-markers -xsvl tests"

[tool.pyrefly]
project-includes = ["aio_databases"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "docs", "examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ARG",
  "D",
  "UP",
  "ANN",
  "DJ",
  "EM",
  "RSE",
  "SLF",
  "RET",
  "S101",
  "PLR2004",
  "PLR0912",
  "N804",
  "A003",
  "TRY003",
  "COM812",
  "PT012",
]

[tool.ruff.lint.per-file-ignores]
"test*.py" = ["FBT001"]

[tool.bumpversion]
current_version = "1.3.0"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.uv.build-backend]
module-name = ["aio_databases"]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
