[wheel]
python-tag = py3

[metadata]
name = aio-databases
version = attr: aio_databases.__version__
url = https://github.com/klen/aio-databases
description = Async Support for various databases
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = asyncio, databases, mysql, sqlite, postgres, postgresql
project_urls = 
	Documentation = https://github.com/klen/aio-databases
	Source code = https://github.com/klen/aio-databases
	Issue tracker = https://github.com/klen/aio-databases/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO
	Framework :: Trio

[options]
packages = aio_databases
include_package_data = True
python_requires = >= 3.7

[options.package_data]
aio_databases =
    py.typed

[options.extras_require]
postgresql =
    asyncpg
mysql =
    aiomysql
sqlite =
    aiosqlite
tests = 
    aiomysql
    aiosqlite
    asyncpg
    cryptography
    psycopg2-binary
    pytest
    pytest-aio >= 1.1.0
    pytest-mypy
    sqlalchemy

[pylama]
ignore = D,D203,D213,D401

[pylama:tests.py]
ignore = D

[tool:pytest]
addopts = -xsv --mypy

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
    pytest tests

[mypy]
ignore_missing_imports = True
